# learn-micrograd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  draw.gp  inputData.txt  outPutForDraw.txt
include/: autoGrad.h  engine.h  micrograd.h  nn.h  test_ground.h  testingGround.h  utils.h  visualizeTool.h  visualize_tool.h
src/: autoGrad.cpp  engine.cpp  main.cpp  micrograd.cpp  nn.cpp  utils.cpp  visualize_tool.cpp
